fixing dark mode text

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -34,7 +34,7 @@ p {
   height: 4px;
   bottom: 0;
   left: 0;
-  background-color: $text-color;
+  background-color: $black;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
